# grsim-ngao

./: .gitignore  404.html  Cargo.toml  README.md  closed-loop_NGAO.html  getting_started.html  introduction.html  print.html  pym_optical_gain.html  searchindex.js  searchindex.json
closed_loop_ngao/: complete_model.html  telemetry.html
getting_started/: dyn_optical_model.html  optical_model.html
guide/: Makefile  book.toml
guide/src/: SUMMARY.md  closed-loop_NGAO.md  getting_started.md  introduction.md  pym_optical_gain.md
guide/src/closed_loop_ngao/: complete_model.md  telemetry.md
guide/src/getting_started/: dyn_optical_model.md  optical_model.md
guide/src/pym_optical_gain/: complete_model.md
optical-model/: Cargo.toml  model.dot  optical_model.dot
optical-model-pym/: Cargo.toml
optical-model-pym/src/: main.rs
optical-model/src/: main.rs
pym-optical-gain/: Cargo.toml
pym-optical-gain/src/: lib.rs  main.rs
pym_optical_gain/: complete_model.html
