[workspace]
members = ["optical-model"]
resolver = "2"

[patch.crates-io]
gmt_dos-actors = { path = "/home/ubuntu/projects/dos-actors/actors" }
gmt_dos-clients = { path = "/home/ubuntu/projects/dos-actors/clients/core" }
gmt_dos-clients_crseo = { path = "/home/ubuntu/projects/dos-actors/clients/crseo" }
gmt_dos-clients_io = { path = "/home/ubuntu/projects/dos-actors/clients/io" }
