[package]
name = "pym-optical-gain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients.workspace = true
gmt_dos-clients_arrow = "2.0.1"
gmt_dos-clients_crseo = { workspace = true, features = ["faer"] }
gmt_dos-clients_io.workspace = true
interface = { version = "1.0.0", package = "gmt_dos-actors-clients_interface" }
tokio.workspace = true
